Kubernetes/service/ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdeploy
  labels:
    name: webdeploy
spec:
  replicas: 2
  selector:
    matchLabels:
      server: web
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        server: web
    spec:
      containers:
        - name: webserver
          image: httpd:2.4
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
